add Edit Servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,14 @@
         <servlet-name>List</servlet-name>
         <servlet-class>org.example.workshop01.Controllers.List</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Edit</servlet-name>
+        <servlet-class>org.example.workshop01.Controllers.Edit</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Edit</servlet-name>
+        <url-pattern>/Edit</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>List</servlet-name>
         <url-pattern>/List</url-pattern>
