--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
         <servlet-name>Edit</servlet-name>
         <servlet-class>org.example.workshop01.Controllers.Edit</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Delete</servlet-name>
+        <servlet-class>org.example.workshop01.Controllers.Delete</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>List</servlet-name>
         <url-pattern>/List</url-pattern>
@@ -26,6 +30,10 @@
     <servlet-mapping>
         <servlet-name>Edit</servlet-name>
         <url-pattern>/Edit</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Delete</servlet-name>
+        <url-pattern>/Delete</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>List</welcome-file>
